# HRIBO

./: ChangeLog  ChangeLog.md  README.md  Snakefile  Snakefile_archea  Snakefile_deepribo  Snakefile_merged  Snakefile_nixtail  Snakefile_nixtail_merged  Snakefile_nixtail_paired  Snakefile_pairedend  Snakefile_qcreport  Snakfile_deepribo  config.yaml  environment.yaml  hribo.sh  run_hribo.sh  samples.tsv  setup.cfg  sge.yaml  slurm.json  slurm.yaml  slurm_run.sh  test.gff  test.gtf  torque.yaml  validate.py
auxillary/: read_counts.bed  summary.xlsx  total_mapped_reads.txt
envs/: auxillary.yaml  bedtools.yaml  biopython.yaml  color.yaml  coverage.yaml  cufflinks.yaml  cutadapt.yaml  dc.yaml  deseq2.yaml  excel.yaml  fastqc.yaml  gawk.yaml  gffcompare.yaml  imagemagick.yaml  mergetools.yaml  metageneprofiling.yaml  multiqc.yaml  normalization.yaml  pear.yaml  plastid.yaml  plotly.yaml  pytools.yaml  reparation.yaml  riborex.yaml  ribotish.yaml  samtools.yaml  scallop.yaml  segemehl.yaml  subread.yaml  wig.yaml  xtail.yaml  xtailcounts.yaml
manual/: manual.tex
report/: annotation.rst  centeredwig.rst  combined.rst  combined_annotation.rst  correlation.rst  fastqcmapped.rst  fiveprimewig.rst  genome.rst  globalwig.rst  multiqc.rst  novelall.rst  novelallfiltered.rst  novelannotation.rst  novelfiltered.rst  novelmerged.rst  rbsTrack.rst  reparation_metagene.rst  reparation_psite.rst  reparation_roc.rst  reparation_scurve.rst  riborex.rst  startCodons.rst  stopCodons.rst  summary.rst  summaryxlsx.rst  threeprimewig.rst  workflow.rst  workflow_nixtail.rst  xtail_fc.rst  (+2 more)
(+129 files in other folders)
