[metadata]
name = hribo
version = 1.5.0
author = 'Rick Gelhausen, Florian Eggenhofer'
author_email = egg@informatik.uni-freiburg.de
description = HRIBO (High-throughput annotation by Ribo-seq), a workflow to enable reproducible and high-throughput analysis of bacterial Ribo-seq data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RickGelhausen/HRIBO
project_urls =
    Bug Tracker = https://github.com/RickGelhausen/HRIBO/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = scripts
packages = find:
python_requires = >=3.6

[options.packages.find]
where = RIssmed
